# OptimizedSubconverter

./: LICENSE  README.md
src/: CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  config.yaml  dns.yaml  main.cpp
